--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "myblog",
-  "version": "1.0.0",
-  "description": "myblog",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "blog",
-    "node"
-  ],
-  "author": "zianecui@gmail.com",
-  "license": "ISC",
-  "dependencies": {
-    "config-lite": "1.5.0",
-    "connect-flash": "0.1.1",
-    "connect-mongo": "1.3.2",
-    "ejs": "2.5.2",
-    "express": "4.14.0",
-    "express-formidable": "1.0.0",
-    "express-session": "1.14.2",
-    "express-winston": "2.0.0",
-    "marked": "0.3.6",
-    "moment": "2.15.2",
-    "mongolass": "2.4.1",
-    "objectid-to-timestamp": "1.3.0",
-    "sha1": "1.1.1",
-    "winston": "2.2.0"
-  }
+    "name": "myblog",
+    "version": "1.0.0",
+    "description": "myblog",
+    "main": "index.js",
+    "scripts": {
+        "test": "mocha --harmony test"
+    }
+    "keywords": [
+        "blog",
+        "node"
+    ],
+    "author": "zianecui@gmail.com",
+    "license": "ISC",
+    "dependencies": {
+        "config-lite": "1.5.0",
+        "connect-flash": "0.1.1",
+        "connect-mongo": "1.3.2",
+        "ejs": "2.5.2",
+        "express": "4.14.0",
+        "express-formidable": "1.0.0",
+        "express-session": "1.14.2",
+        "express-winston": "2.0.0",
+        "marked": "0.3.6",
+        "moment": "2.15.2",
+        "mongolass": "2.4.1",
+        "objectid-to-timestamp": "1.3.0",
+        "sha1": "1.1.1",
+        "winston": "2.2.0"
+    }
 }
